# wite-cmake-example

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test_ubuntu_gcc12_x64_debug.yml  build_and_test_ubuntu_gcc12_x64_release.yml  build_and_test_windows_msvc_x64_debug.yml  build_and_test_windows_msvc_x64_release.yml
wite-cmake-example/: CMakeLists.txt  wite-cmake-example.cpp
